# Meridians-verse

meridian-api/: package-lock.json  package.json
meridian-api/src/: app.module.ts  main.ts
meridian-api/src/auth/: auth.controller.ts  auth.module.ts
meridian-api/src/auth/dto/: resend-verification.dto.ts  verify-email.dto.ts
meridian-api/src/auth/providers/: auth.service.spec.ts  auth.service.ts  sign-in.providers.spec.ts  sign-in.providers.ts  verification-token.constants.ts  verification-token.provider.spec.ts  verification-token.provider.ts  verify-email.provider.spec.ts  verify-email.provider.ts
meridian-api/src/common/exceptions/: validation.exception.spec.ts
meridian-api/src/common/guards/: custom-throttler.guard.ts
meridian-api/src/common/pipes/: sanitize.pipe.ts
meridian-api/src/common/providers/: database-transaction.provider.spec.ts  database-transaction.provider.ts
meridian-api/src/config/: env.validation.ts
meridian-api/src/events/: audit.controller.ts  events.module.ts  events.service.spec.ts  events.service.ts  webhook.controller.ts
meridian-api/src/events/dto/: audit-query.dto.ts  webhook-registration.dto.ts
meridian-api/src/health/: health.controller.ts
meridian-api/src/mail/: mail.module.ts
meridian-api/src/mail/providers/: mail.provider.ts
meridian-api/src/post/: post.controller.spec.ts  post.controller.ts
meridian-api/src/tweets/: tweet.service.spec.ts
meridian-api/src/upload/: upload.controller.spec.ts  upload.controller.ts  upload.service.spec.ts  upload.service.ts
meridian-api/src/users/: user.entity.ts  users.controller.spec.ts
meridian-api/test/: app.e2e-spec.ts  jest-e2e.json  post.e2e-spec.ts
meridian-contracts/: Cargo.toml
meridian-contracts/contracts/bridge/: Cargo.toml
meridian-contracts/contracts/bridge/src/: lib.rs  storage.rs  types.rs  validation.rs
meridian-contracts/contracts/claims/: Cargo.toml
meridian-contracts/contracts/claims/src/: lib.rs
meridian-contracts/contracts/governance/src/: lib.rs
meridian-contracts/contracts/insurance/src/: insurance_impl.rs  insurance_tests.rs  types.rs
meridian-contracts/contracts/lib/src/: access_control.rs  lib.rs  random.rs
meridian-contracts/contracts/oracle/src/: lib.rs
meridian-contracts/contracts/policy/src/: lib.rs
meridian-contracts/contracts/property-token/src/: lib.rs
meridian-contracts/contracts/risk_pool/: Cargo.toml
meridian-contracts/contracts/risk_pool/src/: lib.rs
meridian-contracts/contracts/slashing/src/: lib.rs
meridian-contracts/contracts/traits/src/: lib.rs
meridian-web/: .gitignore  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo
meridian-web/app/: layout.tsx  page.tsx
meridian-web/components/: theme-provider.tsx
meridian-web/components/form/: FormSelect.tsx  FormWrapper.tsx
meridian-web/components/layout/: Footer.tsx  Header.tsx
meridian-web/components/sections/: FocusSection.tsx  Hero.tsx  LazySections.tsx  PoolSection.tsx  StreamSection.tsx
meridian-web/e2e/: README.md  accessibility.spec.ts  homepage.spec.ts  mobile-nav.spec.ts  sign-in.spec.ts  theme-toggle.spec.ts
meridian-web/lib/animations/: variants.ts
(+20 files in other folders)
