[package]
name = "propchain-bridge"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
description = "Cross-chain bridge contract for controlled property-token transfers"
license = "MIT"
homepage = "https://propchain.io"
repository = "https://github.com/MettaChain/PropChain-contract"
publish = false

[dependencies]
soroban-sdk = { workspace = true }

[lib]
name = "propchain_bridge"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["soroban-sdk/testutils"]
